# vger-rs

./: Cargo.toml
examples/basic/: Cargo.toml  README.md
examples/basic/src/: app.rs
examples/image_dev/: Cargo.toml
examples/image_example/: Cargo.toml
examples/image_example/src/: app.rs  blurredapp.rs  buffer.rs  gaussian_blur.rs  grayscale.rs  main.rs  multisampledapp.rs  threshold.rs
examples/vger_winit_example/: Cargo.toml  README.md
src/: atlas.rs  color.rs  glyphs.rs  image_renderer.rs  lib.rs
