[workspace]
resolver = "2"                # What does this do?
members = [".", "examples/basic"]
# Only check / build vger crate by default (check all with `--workspace`)
default-members = ["."]

[workspace.dependencies]
wgpu = "22"

[package]
name = "vger"
description = "2D GPU renderer for dynamic UIs"
version = "0.4.0"
license = "MIT"
readme = "README.md"
authors = ["Taylor Holliday <taylor@audulus.com>"]
keywords = ["graphics", "canvas", "vector", "drawing", "gpu"]
categories = ["graphics"]
repository = "https://github.com/audulus/vger-rs"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { workspace = true }
euclid = "0.22.7"
fontdue = "0.9.0"
rect_packer = "0.2.1"
bytemuck = { version = "1.13.1", default-features = false, features = ["derive"] }
image = { version = "0.25.5", default-features = false, features = ["png"] }

[dev-dependencies]
png = "0.17.6"
futures = "0.3"
futures-intrusive = "0.5"
svg = "0.17.0"
rand = "0.8.5"
