[package]
name = "image_example"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Rust implementation of image processing library with WebGPU."
readme = "README.md"
documentation = "http://neka-nat.github.io/wgimage/wgimage/"
homepage = "https://github.com/neka-nat/wgimage"
repository = "https://github.com/neka-nat/wgimage"
keywords = ["computer-vision", "WebGPU"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vger = { path = "../../" }
winit = "0.30"
nanorand = "0.7"
wgpu = { workspace = true }
image = "0.24.6"
bytemuck = { version = "1.13.1", features = ["derive"] }
futures = "0.3.28"
